--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       </article>
 
-      <footer>Original Party Parrot source unknown.<br/>All variants courtesy of <a href="http://midwestdevchat.com/">Midwest Dev Chat</a>.</footer>
+      <footer>Original Party Parrot source unknown.<br/>All variants courtesy of <a href="http://midwestdevchat.com/">Midwest Dev Chat</a>.<br/><a href="https://github.com/jmhobbs/cultofthepartyparrot.com">Github or Die</a></a></footer>
 
 <script>
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
