--- a/index.html
+++ b/index.html
@@ -6,6 +6,43 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="parrot.css?v=3">
+    <!--
+
+                          ........:oo:........
+                       o//ssssssssyhhysssss+////o                   .'''''''''''''''''.
+                 mddmmm/::ddddddddddddddmmmyss::/mmN               |   PARTY OR DIE   |
+                 o..+oodddmmmhhhhhhhhhhhdmmmmmdddooy               | ,................'
+              h::oyyhddmmm+++///////////++++++mmmddy::s            |/
+           Nyyo[[sddhyyyyy::::::::::::::::::::yyymmh//oyym
+           h..:oohmm+:://///::::////////////////+mmmmms..sNN
+           m++sddmmm+::hddhhy::+ddddddddddddddhhhmmmmmdhh+++d
+        Nsssyyhmmhssooodmmhhh::+mmdyyyyyyyyddddddmmmmmmmmo::d
+      mmd../mmmmmo::shhdmmhhh::+mmhooooooooyhhmmmmmmmmmmmyssdmm
+      +++++smmdddo::///dmmhhh::+mmhooooooooooommmmmddddmmmdd/++m
+      ``+hhhmmhoo/:::::oooooossymmhooooooooyyymmdoooooydddmmo//N
+      ++:mmmmmy:::::::::::::/yyhmmhooooooooyhhmmd:::::+yyhmmyssddd
+      ooommmmmy:::::::::::::://ommhooooooooooommd:::::://shhdmm+..
+      yyhmmh++/::::::::::::::::+mmhooooooooyyymmd::::::::/++hmm+//
+      dddmmh++/::::::::::::::::+mmhooooooooyhhddh:::::::::::hmmysshhd
+      mmmmmdhhs::::::::::::::::+mmhoooooooohhhhhy:::::::::::hmmhhh``+
+      mmmmmh++/::::::::::::::::+mmdhhsooooodmm++/:::::::::::hmmsss``+
+      dddmmhoo+::::::::::::::::+dddddyssyyydmm::::::::::::::hmmsoo++o
+      dddmmdhho::::::::::::::::+hhdmmddddmmmmm::::::::::::::hmmsooNNN
+      mmmmmh///::::::::::::::::+hhdmmmmmmmmddd::::::::::::::hmmsoo++/
+      yyhmmdss+::::::::::::::::/ooydddmmmmmsoo::::::::::::::yddhyy::+
+      ++ommmmmy:::::::::::::::::::ohhdmmddd/::::::::::::::::shhdmmsssNNNmmN
+      ..+mmmmmy:::::::::::::::::::://shh+//:::::::::::::::::://dmmmmdoo+..o
+      ``+dddmmhss+:::::::::::::::::::+++/::::::::::::::::::::::ooodddhhysshNNy++m
+      ``+hhdmmdhhs///:::::::::::::::::::::::::::::::::::::::::::::yyymmmmmmmmo++hNNmdd
+      ``+hhdmmdhhhhh+:::::::::::::::::::::::::::::::::::::::::::::::/hhhhhdmmmmmsoo...
+      ``+ddmmmdhhhhhyyyyyyyyyyyo:::::::::::::::::::::::::::::::::::::+++++sdddmmdhhsss//+
+      ``+mmmmmhsshhhhhhhhhhhhhhy++/:::::::::::::::::::::::::::::::::::::::+ssyyydmmddd///hhd
+      ``+mmmmmy::shhhhhhhhhhhhhhhhs:::::::::::::::::::::::::::::::::::::::::::::ymmmmmmmh../
+      ``+mmmmmy:://////////////ohhhyy+::::::::::::::::::::::::::::::::::::::::::///hddmmmhhs++s
+      ``+mmmmmhssssssssssssssssydddddysssssssssssssssssssssssssssssssssssssssssssssdddmmmmmy::s
+      ``+mmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmmhooh
+
+    -->
   </head>
   <body>
     <div id="wrapper">
