--- a/index.html
+++ b/index.html
@@ -92,23 +92,44 @@
 
         <hr/>
 
-        <p><a class="button-small" href="/paint/">Parrot Paint</a></p>
+        <p>
+          <a class="button-small" href="/paint/">Parrot Paint</a>
+          <a class="button-small" href="https://github.com/jmhobbs/cultofthepartyparrot.com">Github</a>
+        </p>
+        
+        <hr/>
+        
+        <p>
+          Party Parrot based on <a href="https://www.youtube.com/watch?v=6A7uFSbRJ5w">Sirocco</a>, the hardest partying parrot ever.
+        </p>
+
+        <img src="/sirocco.gif" alt="Sirocco" />
+
+        <p>
+          Sirocco is a member of the endangered Kākāpō species.
+        </p>
+
+        <p>
+          <a class="button-small" href="http://kakaporecovery.org.nz/sirocco/">Donate To Keep Them Partying</a>
+        </p>
 
         <hr/>
 
       </article>
 
-      <footer>Original Party Parrot source unknown.<br/>All variants courtesy of <a href="http://midwestdevchat.com/">Midwest Dev Chat</a>.<br/><a href="https://github.com/jmhobbs/cultofthepartyparrot.com">Github or Die</a></a></footer>
+      <footer>
+        All variants courtesy of <a href="http://midwestdevchat.com/">Midwest Dev Chat</a>
+      </footer>
 
-<script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-1664885-25', 'auto');
-ga('send', 'pageview');
-</script>
+        ga('create', 'UA-1664885-25', 'auto');
+        ga('send', 'pageview');
+      </script>
     </div>
   </body>
 </html>
