Meta stuff, closes #1.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="parrot.css?v=3">
+
+    <meta property="og:title" content="Cult of the Party Parrot" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="THE PARROT INSISTS" />
+    <meta property="og:image" content="/og.png" />
+
     <!--
 
                           ........:oo:........
