--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <hr/>
 
         <ul>
-          <li><img src="parrots/parrot.gif" alt="Party Parrot"/> Party Parrot</li>
+          <li><img src="parrots/parrot.gif" alt="Parrot"/>Parrot</li>
           <li><img src="parrots/middleparrot.gif" alt="Middle Parrot"/> Middle Parrot</li>
           <li><img src="parrots/rightparrot.gif" alt="Right Parrot"/> Right Parrot</li>
           <li><img src="parrots/aussieparrot.gif" alt="Aussie Parrot"/> Aussie Parrot</li>
@@ -87,6 +87,7 @@
           <li><img src="parrots/boredparrot.gif" alt="Bored Parrot"/> Bored Parrot</li>
           <li><img src="parrots/shuffleparrot.gif" alt="Shuffle Parrot"/> Shuffle Parrot</li>
           <li><img src="parrots/shufflefurtherparrot.gif" alt="Shuffle Further Parrot"/> Shuffle Further Parrot</li>
+          <li><img src="parrots/partyparrot.gif" alt="Party Parrot"/> Party Parrot</li>
         </ul>
 
         <hr/>
