--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <li><img src="parrots/oldtimeyparrot.gif" alt="Old Timey Parrot"/> Old Timey Parrot</li>
           <li><img src="parrots/boredparrot.gif" alt="Bored Parrot"/> Bored Parrot</li>
           <li><img src="parrots/shuffleparrot.gif" alt="Shuffle Parrot"/> Shuffle Parrot</li>
-          <li><img src="parrots/shufflefurtherparrot.gif" alt="Shuffle Further Parrot"/> Shuffle Further Parrot</li>
+          <li><img src="parrots/shufflefurtherparrot.gif" alt="Shuffle Further Parrot"/> Shuffle Further Parrot<span tooltip="Combine with Shuffle Parrot for a conga line!">*</span></li>
           <li><img src="parrots/partyparrot.gif" alt="Party Parrot"/> Party Parrot</li>
         </ul>
 
