--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <p>
           <a class="button-small" href="/paint/">Parrot Paint</a>
-          <a class="button-small" href="https://github.com/jmhobbs/cultofthepartyparrot.com">Github</a>
+          <a class="button-small" href="https://github.com/jmhobbs/cultofthepartyparrot.com">GitHub</a>
         </p>
         
         <hr/>
