Replace video with a region free one.
Closes #3

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <hr/>
         
         <p>
-          Party Parrot based on <a href="https://www.youtube.com/watch?v=6A7uFSbRJ5w">Sirocco</a>, the hardest partying parrot ever.
+          Party Parrot based on <a href="https://www.youtube.com/watch?v=9T1vfsHYiKY">Sirocco</a>, the hardest partying parrot ever.
         </p>
 
         <img src="/sirocco.gif" alt="Sirocco" />
