--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
         <hr/>
 
         <p>
-          <a class="button-small" href="/paint/">Parrot Paint</a>
+          <a class="button-small" href="paint/">Parrot Paint</a>
           <a class="button-small" href="https://github.com/jmhobbs/cultofthepartyparrot.com">GitHub</a>
+          <a class="button-small" href="parrot.svg">SVG</a>
         </p>
         
         <hr/>
@@ -125,7 +126,7 @@
       </article>
 
       <footer>
-        All variants courtesy of <a href="http://midwestdevchat.com/">Midwest Dev Chat</a>
+        Most variants courtesy of <a href="http://midwestdevchat.com/">Midwest Dev Chat</a>
       </footer>
 
       <script>
