Integrate sad parrot.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Cult of the Party Parrot</title>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="parrot.css?v=3">
+    <link rel="stylesheet" href="parrot.css?v=4">
 
     <meta property="og:title" content="Cult of the Party Parrot" />
     <meta property="og:type" content="website" />
@@ -89,12 +89,13 @@
           <li><img src="parrots/shufflefurtherparrot.gif" alt="Shuffle Further Parrot"/> Shuffle Further Parrot<span tooltip="Combine with Shuffle Parrot for a conga line!">*</span></li>
           <li><img src="parrots/congaparrot.gif" alt="Conga Line Parrot"/> Conga Line Parrot<span tooltip="A self sufficient conga line parrot!">*</span></li>
           <li><img src="parrots/partyparrot.gif" alt="Party Parrot"/> Party Parrot</li>
+          <li><img src="parrots/sadparrot.gif" alt="Sad Parrot"/> Sad Parrot<span tooltip="Parrots are entitled to their full range of emotions.">*</span></li>
         </ul>
 
         <hr/>
 
         <a class="button" href="parrots.zip"></a>
-        <p>(zip, 24kb)</p>
+        <p>(zip, 26kb)</p>
 
         <aside><p>Add them to your Slack. Do it.</p></aside>
 
@@ -127,7 +128,7 @@
       </article>
 
       <footer>
-        Most variants courtesy of <a href="http://midwestdevchat.com/">Midwest Dev Chat</a>
+        With <img src="parrots/parrot.gif"> from <a href="http://midwestdevchat.com/">Midwest Dev Chat</a> &amp; <a href="https://github.com/jmhobbs/cultofthepartyparrot.com#thanks">friends</a>
       </footer>
 
       <script>
