--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           <li><img src="parrots/congaparrot.gif" alt="Conga Line Parrot"/> Conga Line Parrot<span tooltip="A self sufficient conga line parrot!">*</span></li>
           <li><img src="parrots/partyparrot.gif" alt="Party Parrot"/> Party Parrot</li>
           <li><img src="parrots/sadparrot.gif" alt="Sad Parrot"/> Sad Parrot<span tooltip="Parrots are entitled to their full range of emotions.">*</span></li>
+          <li><img src="parrots/parrotcop.gif" alt="Parrot Cop"/> Parrot Cop<span tooltip="Not to be confused with Stripper Parrot!">*</span></li>
           <li><img src="parrots/fastparrot.gif" alt="Fast Parrot"/>Fast Parrot<span tooltip="Now with 50% more party!">*</span></li>
           <li><img src="parrots/slowparrot.gif" alt="Slow Parrot"/>Slow Parrot<span tooltip="Web 1.0 all over again!">*</span></li>
         </ul>
