--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Cult of the Party Parrot</title>
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="parrot.css?v=4">
+    <link rel="stylesheet" href="parrot.css?v=5">
 
     <meta property="og:title" content="Cult of the Party Parrot" />
     <meta property="og:type" content="website" />
@@ -93,6 +93,7 @@
           <li><img src="parrots/parrotcop.gif" alt="Parrot Cop"/> Parrot Cop<span tooltip="Not to be confused with Stripper Parrot!">*</span></li>
           <li><img src="parrots/fastparrot.gif" alt="Fast Parrot"/>Fast Parrot<span tooltip="Now with 50% more party!">*</span></li>
           <li><img src="parrots/slowparrot.gif" alt="Slow Parrot"/>Slow Parrot<span tooltip="Web 1.0 all over again!">*</span></li>
+          <li><img src="parrots/parrotdad.gif" alt="Parrot Dad"/><a href="http://i.imgur.com/USC90yq.gif" target="_blank">Parrot Dad</a><span tooltip="Is totally freaking out.">*</span></li>
         </ul>
 
         <hr/>
