Add temporary link to t-shirt.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
 
         <hr/>
 
+        <img src="/shirt.jpg" alt=":parrot:" style="width: 50%; min-width: 300px;"/>
+
+        <p><a class="button-small" href="https://cottonbureau.com/products/parrot">Get The Shirt</a></p>
+
+        <hr/>
+
         <p>
           <a class="button-small" href="paint/">Parrot Paint</a>
           <a class="button-small" href="https://github.com/jmhobbs/cultofthepartyparrot.com">GitHub</a>
