Add reverse conga line parrot.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
           <li><img src="parrots/shuffleparrot.gif" alt="Shuffle Parrot"/> Shuffle Parrot</li>
           <li><img src="parrots/shufflefurtherparrot.gif" alt="Shuffle Further Parrot"/> Shuffle Further Parrot<span tooltip="Combine with Shuffle Parrot for a conga line!">*</span></li>
           <li><img src="parrots/congaparrot.gif" alt="Conga Line Parrot"/> Conga Line Parrot<span tooltip="A self sufficient conga line parrot!">*</span></li>
+          <li><img src="parrots/reversecongaparrot.gif" alt="Reverse Conga Line Parrot"/> Reverse Conga Line Parrot</li>
           <li><img src="parrots/partyparrot.gif" alt="Party Parrot"/> Party Parrot</li>
           <li><img src="parrots/sadparrot.gif" alt="Sad Parrot"/> Sad Parrot<span tooltip="Parrots are entitled to their full range of emotions.">*</span></li>
           <li><img src="parrots/parrotcop.gif" alt="Parrot Cop"/> Parrot Cop<span tooltip="Not to be confused with Stripper Parrot!">*</span></li>
@@ -100,7 +101,7 @@
         <hr/>
 
         <a class="button" href="parrots.zip"></a>
-        <p>(zip, 53kb)</p>
+        <p>(zip, 55kb)</p>
 
         <aside><p>Add them to your Slack. Do it.</p></aside>
 
