Add fiesta parrot.

--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
           <li><img src="parrots/slowparrot.gif" alt="Slow Parrot"/>Slow Parrot<span tooltip="Web 1.0 all over again!">*</span></li>
           <li><img src="parrots/parrotdad.gif" alt="Parrot Dad"/><a href="http://i.imgur.com/USC90yq.gif" target="_blank">Parrot Dad</a><span tooltip="Is totally freaking out.">*</span></li>
           <li><img src="parrots/dealwithitparrot.gif" alt="Deal With It Parrot"/> Deal With It Parrot</li>
+          <li><img src="parrots/fiestaparrot.gif" alt="Fiesta Parrot"/> Fiesta Parrot</li>
         </ul>
 
         <hr/>
 
         <a class="button" href="parrots.zip"></a>
-        <p>(zip, 55kb)</p>
+        <p>(zip, 63kb)</p>
 
         <aside><p>Add them to your Slack. Do it.</p></aside>
 
