Adds three new parrots: Explody Parrot, Chill Parrot & Conga Party Parrot

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
           <li><img src="parrots/parrotdad.gif" alt="Parrot Dad"/><a href="http://i.imgur.com/USC90yq.gif" target="_blank">Parrot Dad</a><span tooltip="Is totally freaking out.">*</span></li>
           <li><img src="parrots/dealwithitparrot.gif" alt="Deal With It Parrot"/> Deal With It Parrot</li>
           <li><img src="parrots/fiestaparrot.gif" alt="Fiesta Parrot"/> Fiesta Parrot</li>
+          <li><img src="parrots/chillparrot.gif" alt="Chill Parrot"/> Chill Parrot</li>
+          <li><img src="parrots/explodyparrot.gif" alt="Explody Parrot"/> Explody Parrot</li>
+          <li><img src="parrots/congapartyparrot.gif" alt="Conga Party Parrot"/> Conga Party Parrot</li>
         </ul>
 
         <hr/>
