--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
           <li><img src="parrots/fiestaparrot.gif" alt="Fiesta Parrot"/> Fiesta Parrot</li>
           <li><img src="parrots/chillparrot.gif" alt="Chill Parrot"/> Chill Parrot</li>
           <li><img src="parrots/explodyparrot.gif" alt="Explody Parrot"/> Explody Parrot</li>
-          <li><img src="parrots/congapartyparrot.gif" alt="Conga Party Parrot"/> Conga Party Parrot</li>
+          <li><img src="parrots/shufflepartyparrot.gif" alt="Shuffle Party Parrot"/> Shuffle Party Parrot</li>
         </ul>
 
         <hr/>
 
         <a class="button" href="parrots.zip"></a>
-        <p>(zip, 63kb)</p>
+        <p>(zip, 90kb)</p>
 
         <aside><p>Add them to your Slack. Do it.</p></aside>
 
