Make ice cream parrot live!

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
           <li><img src="parrots/chillparrot.gif" alt="Chill Parrot"/> Chill Parrot</li>
           <li><img src="parrots/explodyparrot.gif" alt="Explody Parrot"/> Explody Parrot</li>
           <li><img src="parrots/shufflepartyparrot.gif" alt="Shuffle Party Parrot"/> Shuffle Party Parrot</li>
+          <li><img src="parrots/ice-cream-parrot.gif" alt="Ice Cream Parrot"/> Ice Cream Parrot</li>
         </ul>
 
         <hr/>
