Added parrots to index.html.
The new layout
(https://github.com/jmhobbs/cultofthepartyparrot.com/issues/22) will
probably change how this looks, but for now I think this will do

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
           <li><img src="parrots/explodyparrot.gif" alt="Explody Parrot"/> Explody Parrot</li>
           <li><img src="parrots/shufflepartyparrot.gif" alt="Shuffle Party Parrot"/> Shuffle Party Parrot</li>
           <li><img src="parrots/ice-cream-parrot.gif" alt="Ice Cream Parrot"/> Ice Cream Parrot</li>
+          <li><img src="parrots/parrotwave1.gif" alt="Parrot Wave 1"/><img src="parrots/parrotwave2.gif" alt="Parrot Wave 2"/><img src="parrots/parrotwave3.gif" alt="Parrot Wave 3"/><img src="parrots/parrotwave4.gif" alt="Parrot Wave 4"/><img src="parrots/parrotwave5.gif" alt="Parrot Wave 5"/><img src="parrots/parrotwave6.gif" alt="Parrot Wave 6"/><img src="parrots/parrotwave7.gif" alt="Parrot Wave 7"/> Mexican Wave Parrots</li>
         </ul>
 
         <hr/>
