Link to terminal-parrot

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 
         <p>
           <a class="button-small" href="parrot.svg">SVG</a>
+          <a class="button-small" href="https://github.com/jmhobbs/terminal-parrot">Terminal</a>
           <a class="button-small" href="https://github.com/jmhobbs/cultofthepartyparrot.com">GitHub</a>
         </p>
         
