Updated parrot list.

--- a/index.html
+++ b/index.html
@@ -101,13 +101,21 @@
           <li><img src="parrots/explodyparrot.gif" alt="Explody Parrot"/> Explody Parrot</li>
           <li><img src="parrots/shufflepartyparrot.gif" alt="Shuffle Party Parrot"/> Shuffle Party Parrot</li>
           <li><img src="parrots/ice-cream-parrot.gif" alt="Ice Cream Parrot"/> Ice Cream Parrot</li>
-          <li><img src="parrots/parrotwave1.gif" alt="Parrot Wave 1"/><img src="parrots/parrotwave2.gif" alt="Parrot Wave 2"/><img src="parrots/parrotwave3.gif" alt="Parrot Wave 3"/><img src="parrots/parrotwave4.gif" alt="Parrot Wave 4"/><img src="parrots/parrotwave5.gif" alt="Parrot Wave 5"/><img src="parrots/parrotwave6.gif" alt="Parrot Wave 6"/><img src="parrots/parrotwave7.gif" alt="Parrot Wave 7"/> Mexican Wave Parrots</li>
+          <li><img src="parrots/aussiecongaparrot.gif" alt="Aussie Conga Line Parrot"/> Aussie Conga Line Parrot</li>
+          <li><img src="parrots/aussiereversecongaparrot.gif" alt="Aussie Reverse Conga Line Parrot"/> Aussie Reverse Conga Line Parrot</li>
+          <li><img src="parrots/parrotwave1.gif" alt="Parrot Wave (1)"/> Parrot Wave (1)</li>
+          <li><img src="parrots/parrotwave2.gif" alt="Parrot Wave (2)"/> Parrot Wave (2)</li>
+          <li><img src="parrots/parrotwave3.gif" alt="Parrot Wave (3)"/> Parrot Wave (3)</li>
+          <li><img src="parrots/parrotwave4.gif" alt="Parrot Wave (4)"/> Parrot Wave (4)</li>
+          <li><img src="parrots/parrotwave5.gif" alt="Parrot Wave (5)"/> Parrot Wave (5)</li>
+          <li><img src="parrots/parrotwave6.gif" alt="Parrot Wave (6)"/> Parrot Wave (6)</li>
+          <li><img src="parrots/parrotwave7.gif" alt="Parrot Wave (7)"/> Parrot Wave (7)</li>
         </ul>
 
         <hr/>
 
         <a class="button" href="parrots.zip"></a>
-        <p>(zip, 88kb)</p>
+        <p>(zip)</p>
 
         <aside><p>Add them to your Slack. Do it.</p></aside>
 
