--- a/index.html
+++ b/index.html
@@ -135,9 +135,15 @@
 
         <p>
           <a class="button-small" href="parrot.svg">SVG</a>
-          <a class="button-small" href="https://github.com/jmhobbs/terminal-parrot">Terminal</a>
           <a class="button-small" href="https://github.com/jmhobbs/cultofthepartyparrot.com">GitHub</a>
+        </p>
+
+        <hr/>
+
+        <p>
+          <a class="button-small" href="https://github.com/jmhobbs/terminal-parrot">Terminal</a>
           <a class="button-small" href="https://github.com/Shrugs/partyparrot">Text-To-Parrots</a>
+          <a class="button-small" href="http://countryparrots.com/">Country Parrots</a>
         </p>
         
         <hr/>
