--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           <li><img src="parrots/parrotwave7.gif" alt="Parrot Wave (7)"/> Parrot Wave (7)</li>
           <li><img src="parrots/congapartyparrot.gif" alt="Conga Party Parrot"/> Conga Party Parrot</li>
           <li><img src="parrots/moonwalkingparrot.gif" alt="Moonwalking Parrot"/> Moonwalking Parrot</li>
+          <li><img src="parrots/smugparrot.gif" alt="Smug Parrot"/> Smug Parrot<span tooltip="REEEEEEEEEEE">*</span></li>
         </ul>
 
         <hr/>
