Add confused parrot

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
           <li><img src="parrots/shufflepartyparrot.gif" alt="Shuffle Party Parrot"/> Shuffle Party Parrot</li>
           <li><img src="parrots/ice-cream-parrot.gif" alt="Ice Cream Parrot"/> Ice Cream Parrot</li>
           <li><img src="parrots/sassyparrot.gif" alt="Sassy Parrot"/> Sassy Parrot</li>
+          <li><img src="parrots/confusedparrot.gif" alt="Confused Parrot"/> Confused Parrot</li>
           <li><img src="parrots/aussiecongaparrot.gif" alt="Aussie Conga Line Parrot"/> Aussie Conga Line Parrot</li>
           <li><img src="parrots/aussiereversecongaparrot.gif" alt="Aussie Reverse Conga Line Parrot"/> Aussie Reverse Conga Line Parrot</li>
           <li><img src="parrots/parrotwave1.gif" alt="Parrot Wave (1)"/> Parrot Wave (1)</li>
