--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
           <li><img src="parrots/dealwithitparrot.gif" alt="Deal With It Parrot"/> Deal With It Parrot</li>
           <li><img src="parrots/fiestaparrot.gif" alt="Fiesta Parrot"/> Fiesta Parrot</li>
           <li><img src="parrots/pizzaparrot.gif" alt="Pizza Parrot"/> Pizza Parrot</li>
+          <li><img src="parrots/hamburgerparrot.gif" alt="Hamburger Parrot"/> Hamburger Parrot</li>
           <li><img src="parrots/chillparrot.gif" alt="Chill Parrot"/> Chill Parrot</li>
           <li><img src="parrots/explodyparrot.gif" alt="Explody Parrot"/> Explody Parrot</li>
           <li><img src="parrots/shufflepartyparrot.gif" alt="Shuffle Party Parrot"/> Shuffle Party Parrot</li>
