--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
           <li><img src="parrots/parrotdad.gif" alt="Parrot Dad"/> Parrot Dad<span tooltip="Is totally freaking out.">*</span></li>
           <li><img src="parrots/dealwithitparrot.gif" alt="Deal With It Parrot"/> Deal With It Parrot</li>
           <li><img src="parrots/fiestaparrot.gif" alt="Fiesta Parrot"/> Fiesta Parrot</li>
-          <li><img src="parrots/pizzaparrot.gif" alt="Pizza Parrot"/> Pizza Parrot</li>
-          <li><img src="parrots/hamburgerparrot.gif" alt="Hamburger Parrot"/> Hamburger Parrot</li>
+          <li><img src="parrots/pizzaparrot.gif" alt="🍕 Parrot"/> 🍕 Parrot</li>
+          <li><img src="parrots/hamburgerparrot.gif" alt="🍔 Parrot"/> 🍔 Parrot</li>
           <li><img src="parrots/chillparrot.gif" alt="Chill Parrot"/> Chill Parrot</li>
           <li><img src="parrots/explodyparrot.gif" alt="Explody Parrot"/> Explody Parrot</li>
           <li><img src="parrots/shufflepartyparrot.gif" alt="Shuffle Party Parrot"/> Shuffle Party Parrot</li>
@@ -114,6 +114,8 @@
           <li><img src="parrots/parrotwave5.gif" alt="Parrot Wave (5)"/> Parrot Wave (5)</li>
           <li><img src="parrots/parrotwave6.gif" alt="Parrot Wave (6)"/> Parrot Wave (6)</li>
           <li><img src="parrots/parrotwave7.gif" alt="Parrot Wave (7)"/> Parrot Wave (7)</li>
+          <li><img src="parrots/congapartyparrot.gif" alt="Conga Party Parrot"/> Conga Party Parrot</li>
+          <li><img src="parrots/moonwalkingparrot.gif" alt="Moonwalking Parrot"/> Moonwalking Parrot</li>
         </ul>
 
         <hr/>
