Add party pooper parrot

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
           <li><img src="parrots/congapartyparrot.gif" alt="Conga Party Parrot"/> Conga Party Parrot</li>
           <li><img src="parrots/moonwalkingparrot.gif" alt="Moonwalking Parrot"/> Moonwalking Parrot</li>
           <li><img src="parrots/parrotmustache.gif" alt="Parrot with mustache"/> Parrot with mustache</li>
+          <li><img src="parrots/partypooperparrot.gif" alt="Party Pooper Parrot"/> Party Pooper Parrot</li>
         </ul>
 
         <hr/>
