Bring README and website up to date.

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
           <li><img src="parrots/parrotwave7.gif" alt="Parrot Wave (7)"/> Parrot Wave (7)</li>
           <li><img src="parrots/congapartyparrot.gif" alt="Conga Party Parrot"/> Conga Party Parrot</li>
           <li><img src="parrots/moonwalkingparrot.gif" alt="Moonwalking Parrot"/> Moonwalking Parrot</li>
+          <li><img src="parrots/coffeeparrot.gif" alt="Coffee Parrot"/> Coffee Parrot</li>
           <li><img src="parrots/parrotmustache.gif" alt="Parrot with mustache"/> Parrot with mustache</li>
           <li><img src="parrots/christmasparrot.gif" alt="Christmas Parrot"/> Christmas Parrot</li>
         </ul>
