added witness protection parrot... shhh

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
           <li><img src="parrots/coffeeparrot.gif" alt="Coffee Parrot"/> Coffee Parrot</li>
           <li><img src="parrots/parrotmustache.gif" alt="Parrot with mustache"/> Parrot with mustache</li>
           <li><img src="parrots/christmasparrot.gif" alt="Christmas Parrot"/> Christmas Parrot</li>
+          <li><img src="parrots/witnessprotectionparrot.gif" alt="Witness Protection Parrot"/> Witness Protection Parrot<span tooltip="I wonder who this guy is?">*</span></li>
         </ul>
 
         <hr/>
