Add link to keyboard app

--- a/index.html
+++ b/index.html
@@ -149,6 +149,13 @@
 
         <hr/>
 
+        <h3>Keyboards!</h3>
+        <div class="clearfix">
+          <a href="https://play.google.com/store/apps/details?id=us.fetch321.partyparrotkeyboard"><img src="google-play-badge.png" alt="Download on Google Play" /></a>
+        </div>
+
+        <hr/>
+
         <p>
           <a class="button-small" id="parrot_svg" href="parrot.svg">SVG</a>
           <a class="button-small" href="https://github.com/jmhobbs/cultofthepartyparrot.com">GitHub</a>
