--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
           <li><img src="parrots/christmasparrot.gif" alt="Christmas Parrot"/> Christmas Parrot</li>
           <li><img src="parrots/witnessprotectionparrot.gif" alt="Witness Protection Parrot"/> Witness Protection Parrot<span tooltip="I wonder who this guy is?">*</span></li>
           <li><img src="parrots/parrotsleep.gif" alt="Sleepy Parrot"/> Sleepy Parrot</li>
+          <li><img src="parrots/parrotbeer.gif" alt="Happy Hour Parrot"/> Happy Hour Parrot</li>
         </ul>
 
         <hr/>
