Add link to keyboard app (#54)
* Add link to keyboard app

* Combine sticker packs and keyboard sections

--- a/index.html
+++ b/index.html
@@ -145,9 +145,12 @@
 
         <hr/>
 
-        <h3>Sticker Packs!</h3>
+        <h3>Keyboards!</h3>
         <div class="clearfix">
           <a href="https://itunes.apple.com/us/app/cult-of-the-party-parrot/id1169278591?ls=1&mt=8"><img src="app-store-badge.svg" alt="Download on the App Store" /></a>
+        </div>
+        <div class="clearfix">
+          <a href="https://play.google.com/store/apps/details?id=us.fetch321.partyparrotkeyboard"><img src="google-play-badge.png" alt="Download on Google Play" /></a>
         </div>
 
         <hr/>
