Adding first collection of party parrots I created

--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
           <li><img src="parrots/witnessprotectionparrot.gif" alt="Witness Protection Parrot"/> Witness Protection Parrot<span tooltip="I wonder who this guy is?">*</span></li>
           <li><img src="parrots/parrotsleep.gif" alt="Sleepy Parrot"/> Sleepy Parrot</li>
           <li><img src="parrots/parrotbeer.gif" alt="Happy Hour Parrot"/> Happy Hour Parrot</li>
+          <li><img src="parrots/darkbeerparrot.gif" alt="Dark Beer Parrot"/> Dark Beer Parrot</li>
+          <li><img src="parrots/blondesassyparrot.gif" alt="Blonde Sassy Parrot"/> Blonde Sassy Parrot</li>
+          <li><img src="parrots/bluecluesparrot.gif" alt="Blues Clues Parrot"/> Blues Clues Parrot</li>
+          <li><img src="parrots/gentlemenparrot.gif" alt="Gentlemen Parrot"/> Gentlemen Parrot</li>
+          <li><img src="parrots/magaritaparrot.gif" alt="Magarita Parrot"/> Magarita Parrot</li>
+          <li><img src="parrots/oriolesparrot.gif" alt="Orioles Parrot"/> Orioles Parrot</li>
         </ul>
 
         <hr/>
