--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <li><img src="parrots/darkbeerparrot.gif" alt="Dark Beer Parrot"/> Dark Beer Parrot</li>
           <li><img src="parrots/blondesassyparrot.gif" alt="Blonde Sassy Parrot"/> Blonde Sassy Parrot</li>
           <li><img src="parrots/bluecluesparrot.gif" alt="Blues Clues Parrot"/> Blues Clues Parrot</li>
-          <li><img src="parrots/gentlemenparrot.gif" alt="Gentlemen Parrot"/> Gentlemen Parrot</li>
+          <li><img src="parrots/gentlemanparrot.gif" alt="Gentleman Parrot"/> Gentleman Parrot</li>
           <li><img src="parrots/magaritaparrot.gif" alt="Magarita Parrot"/> Magarita Parrot</li>
           <li><img src="parrots/oriolesparrot.gif" alt="Orioles Parrot"/> Orioles Parrot</li>
         </ul>
