--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
           <li><img src="parrots/darkbeerparrot.gif" alt="Dark Beer Parrot"/> Dark Beer Parrot</li>
           <li><img src="parrots/blondesassyparrot.gif" alt="Blonde Sassy Parrot"/> Blonde Sassy Parrot</li>
           <li><img src="parrots/bluecluesparrot.gif" alt="Blues Clues Parrot"/> Blues Clues Parrot</li>
-          <li><img src="parrots/gentlemanparrot.gif" alt="Gentleman Parrot"/> Gentleman Parrot</li>
-          <li><img src="parrots/magaritaparrot.gif" alt="Magarita Parrot"/> Magarita Parrot</li>
-          <li><img src="parrots/oriolesparrot.gif" alt="Orioles Parrot"/> Orioles Parrot</li>
+          <li><img src="parrots/gentlemanparrot.gif" alt="Gentleman Parrot"/> Gentleman Parrot<span tooltip="A true gentleman parrot">*</span></li>
+          <li><img src="parrots/magaritaparrot.gif" alt="Magarita Parrot"/> Magarita Parrot<span tooltip="Fiesta Parrot is getting his drink on, magarita style!">*</span></li>
+          <li><img src="parrots/oriolesparrot.gif" alt="Orioles Parrot"/> Orioles Parrot<span tooltip="This parrot loves the orioles so much he turned into one!">*</span></li>
         </ul>
 
         <hr/>
