Larger dreidel, and add it to the site.
Dreidel, dreidel, dreidel,
I made you out of clay.
And when you’re dry and ready,
I'll party all the day!

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
           <li><img src="parrots/gentlemanparrot.gif" alt="Gentleman Parrot"/> Gentleman Parrot<span tooltip="A true gentleman parrot">*</span></li>
           <li><img src="parrots/magaritaparrot.gif" alt="Magarita Parrot"/> Magarita Parrot<span tooltip="Fiesta Parrot is getting his drink on, magarita style!">*</span></li>
           <li><img src="parrots/oriolesparrot.gif" alt="Orioles Parrot"/> Orioles Parrot<span tooltip="This parrot loves the orioles so much he turned into one!">*</span></li>
+          <li><img src="parrots/dreidelparrot.gif" alt="Dreidel Parrot"/> Dreidel Parrot<span tooltip="Happy Hanukkah!">*</span></li>
         </ul>
 
         <hr/>
