--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <li><img src="parrots/magaritaparrot.gif" alt="Magarita Parrot"/> Magarita Parrot<span tooltip="Fiesta Parrot is getting his drink on, magarita style!">*</span></li>
           <li><img src="parrots/oriolesparrot.gif" alt="Orioles Parrot"/> Orioles Parrot<span tooltip="This parrot loves the orioles so much he turned into one!">*</span></li>
           <li><img src="parrots/dreidelparrot.gif" alt="Dreidel Parrot"/> Dreidel Parrot<span tooltip="Happy Hanukkah!">*</span></li>
-          <li><img src="parrots/harrypotterparrot.gif" alt="Harry Potter Parrot"/> Harry Potter Parrot<span tooltip="You're a parrot-wizard Harry!">*</span></li>
+          <li><img src="parrots/harrypotterparrot.gif" alt="Harry Potter Parrot"/> Harry Potter Parrot<span tooltip="You&#39;re a parrot-wizard Harry!">*</span></li>
         </ul>
 
         <hr/>
