--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
           <li><img src="parrots/oriolesparrot.gif" alt="Orioles Parrot"/> Orioles Parrot<span tooltip="This parrot loves the orioles so much he turned into one!">*</span></li>
           <li><img src="parrots/dreidelparrot.gif" alt="Dreidel Parrot"/> Dreidel Parrot<span tooltip="Happy Hanukkah!">*</span></li>
           <li><img src="parrots/harrypotterparrot.gif" alt="Harry Potter Parrot"/> Harry Potter Parrot<span tooltip="You&#39;re a parrot-wizard Harry!">*</span></li>
+          <li><img src="parrots/upvotepartyparrot.gif" alt="Upvote Party Parrot"/> Upvote Party Parrot</li>
         </ul>
 
         <hr/>
@@ -172,6 +173,7 @@
           <a class="button-small" href="https://github.com/jmhobbs/terminal-parrot">Terminal</a>
           <a class="button-small" href="https://github.com/Shrugs/partyparrot">Text-To-Parrots</a>
           <a class="button-small" href="http://countryparrots.com/">Country Parrots</a>
+          <a class="button-small" href="https://github.com/francoislg/PPaaS">Party Parrot as a Service</a>
         </p>
         
         <hr/>
