Added Party Parrot as a Service link (#64)
+ Added upvotepartyparrot.gif generated with PPaaS

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
           <li><img src="parrots/dreidelparrot.gif" alt="Dreidel Parrot"/> Dreidel Parrot<span tooltip="Happy Hanukkah!">*</span></li>
           <li><img src="parrots/harrypotterparrot.gif" alt="Harry Potter Parrot"/> Harry Potter Parrot<span tooltip="You&#39;re a parrot-wizard Harry!">*</span></li>
           <li><img src="parrots/fieriparrot.gif" alt="Guy Fieri Parrot"/> Guy Fieri Parrot<span tooltip="One way ticket to flavor town!">*</span></li>
+          <li><img src="parrots/upvotepartyparrot.gif" alt="Upvote Party Parrot"/> Upvote Party Parrot</li>
         </ul>
 
         <hr/>
@@ -173,6 +174,7 @@
           <a class="button-small" href="https://github.com/jmhobbs/terminal-parrot">Terminal</a>
           <a class="button-small" href="https://github.com/Shrugs/partyparrot">Text-To-Parrots</a>
           <a class="button-small" href="http://countryparrots.com/">Country Parrots</a>
+          <a class="button-small" href="https://github.com/francoislg/PPaaS">Party Parrot as a Service</a>
         </p>
         
         <hr/>
