Add Twin parrots and Triplets parrots

--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
           <li><img src="parrots/harrypotterparrot.gif" alt="Harry Potter Parrot"/> Harry Potter Parrot<span tooltip="You&#39;re a parrot-wizard Harry!">*</span></li>
           <li><img src="parrots/fieriparrot.gif" alt="Guy Fieri Parrot"/> Guy Fieri Parrot<span tooltip="One way ticket to flavor town!">*</span></li>
           <li><img src="parrots/upvotepartyparrot.gif" alt="Upvote Party Parrot"/> Upvote Party Parrot</li>
+          <li><img src="parrots/twinsparrot.gif" alt="Twins Parrot"/> Twins Parrot</li>
+          <li><img src="parrots/tripletsparrot.gif" alt="Triplets Parrot"/> Triplets Parrot</li>
         </ul>
 
         <hr/>
