--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
           <li><img src="parrots/fiestaparrot.gif" alt="Fiesta Parrot"/> Fiesta Parrot</li>
           <li><img src="parrots/pizzaparrot.gif" alt="🍕 Parrot"/> 🍕 Parrot</li>
           <li><img src="parrots/hamburgerparrot.gif" alt="🍔 Parrot"/> 🍔 Parrot</li>
+          <li><img src="parrots/santaparrot.gif" alt="Santa Parrot"/> Santa Parrot</li>
           <li><img src="parrots/chillparrot.gif" alt="Chill Parrot"/> Chill Parrot</li>
           <li><img src="parrots/explodyparrot.gif" alt="Explody Parrot"/> Explody Parrot</li>
           <li><img src="parrots/shufflepartyparrot.gif" alt="Shuffle Party Parrot"/> Shuffle Party Parrot</li>
@@ -132,8 +133,8 @@
           <li><img src="parrots/harrypotterparrot.gif" alt="Harry Potter Parrot"/> Harry Potter Parrot<span tooltip="You&#39;re a parrot-wizard Harry!">*</span></li>
           <li><img src="parrots/fieriparrot.gif" alt="Guy Fieri Parrot"/> Guy Fieri Parrot<span tooltip="One way ticket to flavor town!">*</span></li>
           <li><img src="parrots/upvotepartyparrot.gif" alt="Upvote Party Parrot"/> Upvote Party Parrot</li>
-          <li><img src="parrots/twinsparrot.gif" alt="Twins Parrot"/> Twins Parrot</li>
-          <li><img src="parrots/tripletsparrot.gif" alt="Triplets Parrot"/> Triplets Parrot</li>
+          <li><img src="parrots/twinsparrot.gif" alt="Twins Parrot"/> Twins Parrot<span tooltip="parrot + parrot &#x3D; great party!">*</span></li>
+          <li><img src="parrots/tripletsparrot.gif" alt="Triplets Parrot"/> Triplets Parrot<span tooltip="parrot + parrot + parrot &#x3D; magnificent party!!!!">*</span></li>
         </ul>
 
         <hr/>
