Added Army Parrot.

--- a/index.html
+++ b/index.html
@@ -132,8 +132,9 @@
           <li><img src="parrots/harrypotterparrot.gif" alt="Harry Potter Parrot"/> Harry Potter Parrot<span tooltip="You&#39;re a parrot-wizard Harry!">*</span></li>
           <li><img src="parrots/fieriparrot.gif" alt="Guy Fieri Parrot"/> Guy Fieri Parrot<span tooltip="One way ticket to flavor town!">*</span></li>
           <li><img src="parrots/upvotepartyparrot.gif" alt="Upvote Party Parrot"/> Upvote Party Parrot</li>
-          <li><img src="parrots/twinsparrot.gif" alt="Twins Parrot"/> Twins Parrot</li>
-          <li><img src="parrots/tripletsparrot.gif" alt="Triplets Parrot"/> Triplets Parrot</li>
+          <li><img src="parrots/twinsparrot.gif" alt="Twins Parrot"/> Twins Parrot<span tooltip="parrot + parrot &#x3D; great party!">*</span></li>
+          <li><img src="parrots/tripletsparrot.gif" alt="Triplets Parrot"/> Triplets Parrot<span tooltip="parrot + parrot + parrot &#x3D; magnificent party!!!!">*</span></li>
+          <li><img src="parrots/armyparrot.gif" alt="Army Parrot"/> Army Parrot</li>
         </ul>
 
         <hr/>
