Add Stable Parrot (#71)

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
           <li><img src="parrots/upvotepartyparrot.gif" alt="Upvote Party Parrot"/> Upvote Party Parrot</li>
           <li><img src="parrots/twinsparrot.gif" alt="Twins Parrot"/> Twins Parrot<span tooltip="parrot + parrot &#x3D; great party!">*</span></li>
           <li><img src="parrots/tripletsparrot.gif" alt="Triplets Parrot"/> Triplets Parrot<span tooltip="parrot + parrot + parrot &#x3D; magnificent party!!!!">*</span></li>
+          <li><img src="parrots/stableparrot.gif" alt="Stable Parrot"/> Stable Parrot<span tooltip="Gyrostablization Mode Initiated">*</span></li>
         </ul>
 
         <hr/>
